--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,13 +1,17 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/register.css' %}">
     <title>Registration</title>
 </head>
 <body>
-    <form action="register" method ="post">
+    <div class="container">
+
+        <form action="register" method ="post" class="form"><h1>Registration!</h1>
         {% csrf_token %}
         <input type="text" name="first_name" placeholder="first name"><br>
         <input type="text" name="last_name" placeholder="last name"><br>
@@ -17,6 +21,8 @@
         <input type="password" name="c_password" placeholder="Confirm Password"><br>
         <input type="submit" name="submit"><br>
     </form>
+    </div>
+
     <div>
         <h3>
             {% for message in messages %}
